<resources>
    <string name="app_name">poly-sender-android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="application_name_header">PolySender</string>
    <string name="floating_button_add_section">floating_button_add_section</string>
    <string name="floating_button_add_attribute">floating_button_add_attribute</string>
    <string name="floating_button_add_for_attribute">floating_button_add_for_attribute</string>
    <string name="floating_button_add_filter">floating_button_add_filter</string>
    <string name="floating_button_add_for_filter">floating_button_add_for_filter</string>
    <string name="filter_card_button_edit">filter_card_button_edit</string>
    <string name="filter_card_button_delete">filter_card_button_delete</string>
    <string name="filter_card_button_share">filter_card_button_share</string>
    <string name="attribute_card_button_edit">attribute_card_button_edit</string>
    <string name="attribute_card_button_delete">attribute_card_button_delete</string>
    <string name="attribute_card_button_share">attribute_card_button_share</string>
    <string name="profile_square">profile_square</string>
    <string name="student_profile_square">student_profile_square</string>

    <string name="empty_field_error">Не может быть пустым</string>
    <string name="status_false">status: false</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
    <string name="create_success">Создано успешно</string>
    <string name="update_success">Обновлено успешно</string>
    <string name="delete_success">Удалено успешно</string>
    <string name="reply_success">Почта была переслана успешно</string>
    <string name="label_selected">Выбрано</string>

    <string name="label_attribute_profile">Профиль аттрибута</string>
    <string name="label_filter_profile">Профиль фильтра</string>
    <string name="label_student_profile">Профиль студента</string>
    <string name="label_my_profile">Мой профиль</string>
    <string name="label_settings">Настройки</string>
    <string name="label_creation_attribute">Создание аттрибута</string>
    <string name="label_creation_filter">Создание фильтра</string>
    <string name="label_creation_section">Создание раздела</string>
    <string name="label_attributes">Атрибуты</string>
    <string name="label_login">Вход</string>
    <string name="label_register">Регистрация</string>
    <string name="label_restore">Восстановление пароля</string>
    <string name="label_filters">Фильтры</string>
    <string name="label_students">Студенты</string>
    <string name="label_attributing">Фильтрация</string>
    <string name="menu_students">Студенты</string>
    <string name="menu_attributes">Аттрибуты</string>
    <string name="menu_filters">Фильтры</string>
    <string name="menu_my_profile">Мой профиль</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_apply">Подтвердить</string>
    <string name="menu_clear">Очистить</string>
    <string name="menu_next">Дальше</string>
    <string name="menu_attributing">Фильтрация</string>
    <string name="menu_select_all">Выбрать все</string>
    <string name="fab_filter">Фильтр</string>
    <string name="fab_section">Раздел</string>
    <string name="fab_attribute">Атрибут</string>
    <string name="fab_desc_add">Добавить</string>
    <string name="looking_up_easily">Looking up easily!</string>
    <string name="attribute_profile_header">Атрибут</string>
    <string name="attribute_profile_section">Раздел</string>
    <string name="attribute_profile_students">Студенты</string>
    <string name="attribute_profile_type">Создан</string>
    <string name="attribute_profile_date">Дата</string>
    <string name="hint_section">Раздел</string>
    <string name="hint_attribute_name">Название атрибута</string>
    <string name="hint_filter_name">Название фильтра</string>
    <string name="hint_mailing_mode">Получение почты</string>
    <string name="hint_section_name">Название раздела</string>
    <string name="filter_profile_header">Фильтр</string>
    <string name="filter_profile_email">Почта</string>
    <string name="filter_profile_students">Студенты</string>
    <string name="filter_profile_type">Создан</string>
    <string name="filter_profile_date">Дата</string>
    <string name="filter_profile_mailing_mode">Режим</string>
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_forgot_password">Забыли пароль?</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Получить учетную запись</string>
    <string name="desc_transparent">transparent border</string>
    <string name="hint_lastname">Фамилия</string>
    <string name="hint_firstname">Имя</string>
    <string name="hint_patronymic">Отчество</string>
    <string name="hint_department">Институт</string>
    <string name="hint_high_school">Высшая школа</string>
    <string name="btn_take_access">Запросить доступ</string>
    <string name="btn_already_have_account">Уже есть аккаунт</string>
    <string name="btn_restore_password">Восстановить пароль</string>
    <string name="text_view_change_password">Изменить пароль</string>
    <string name="hint_old_password">Старый пароль</string>
    <string name="hint_new_password">Новый пароль</string>
    <string name="hint_new_password_again">Повторите пароль</string>
    <string name="btn_change">Изменить</string>
    <string name="text_view_take_admin_access">Запросить права администратора</string>
    <string name="btn_take_admin_access">Запросить</string>
    <string name="attribute_profile_expression">Expression</string>
    <string name="btn_logout">Выйти из аккаунта</string>

</resources>