<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_graph_students"
        android:checkable="true"
        android:icon="@drawable/sl_students"
        app:showAsAction="ifRoom"
        android:title="@string/menu_students" />
    <item
        android:id="@+id/nav_graph_attributes"
        android:checkable="true"
        android:icon="@drawable/sl_attributes"
        app:showAsAction="ifRoom"
        android:title="@string/menu_attributes" />
    <item
        android:id="@+id/nav_graph_filters"
        android:checkable="true"
        android:icon="@drawable/sl_filter"
        app:showAsAction="ifRoom"
        android:title="@string/menu_filters" />

</menu>