<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.poly.poly_sender_android.ui.auth.MainActivity">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_card_edit"
        android:orderInCategory="100"
        android:title="@string/menu_edit"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_card_share"
        android:orderInCategory="200"
        android:title="@string/menu_share"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_card_delete"
        android:orderInCategory="300"
        android:title="@string/menu_delete"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="never" />
</menu>