<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.poly.poly_sender_android.ui.auth.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        tools:ignore="Autofill" />

    <item
        android:id="@+id/action_attributing"
        android:icon="@drawable/ic_filters"
        android:orderInCategory="200"
        android:title="@string/menu_attributing"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next"
        android:orderInCategory="300"
        android:title="@string/menu_next"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
</menu>