<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.poly.poly_sender_android.ui.auth.MainActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/sl_check_all"
        android:orderInCategory="50"
        android:title="@string/menu_select_all"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_attributing"
        android:icon="@drawable/ic_filters"
        android:orderInCategory="200"
        android:title="@string/menu_attributing"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next"
        android:orderInCategory="300"
        android:title="@string/menu_search"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
</menu>