<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_auth"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.poly.poly_sender_android.ui.auth.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />

        <action
            android:id="@+id/action_LoginFragment_to_RestoreFragment"
            app:destination="@id/RestoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.poly.poly_sender_android.ui.auth.register.RegisterFragment"
        android:label="@string/label_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/RestoreFragment"
        android:name="com.poly.poly_sender_android.ui.auth.restore.RestoreFragment"
        android:label="@string/label_restore"
        tools:layout="@layout/fragment_restore">

        <action
            android:id="@+id/action_RestoreFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>